@@ -68,7 +68,7 @@ EOW
     }
 
 
-    # This section was automatically generated by Dist::Zilla::Plugin::ModuleBuild v6.012.
+    # This section was automatically generated by Dist::Zilla::Plugin::ModuleBuild v6.017.
     use strict;
     use warnings;
 
@@ -84,7 +84,7 @@ EOW
         "Dan Book <dbook\@cpan.org>"
       ],
       "dist_name" => "Mojo-Promise-Role-Get",
-      "dist_version" => "v0.1.2",
+      "dist_version" => "v0.1.3",
       "license" => "artistic_2",
       "module_name" => "Mojo::Promise::Role::Get",
       "recursive_test_files" => 1,
