@@ -4,7 +4,7 @@
       "Dan Book <dbook@cpan.org>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 6.012, CPAN::Meta::Converter version 2.150010",
+   "generated_by" : "Dist::Zilla version 6.017, CPAN::Meta::Converter version 2.150010",
    "license" : [
       "artistic_2"
    ],
@@ -58,7 +58,7 @@
    "provides" : {
       "Mojo::Promise::Role::Get" : {
          "file" : "lib/Mojo/Promise/Role/Get.pm",
-         "version" : "v0.1.2"
+         "version" : "v0.1.3"
       }
    },
    "release_status" : "stable",
@@ -72,529 +72,14 @@
          "url" : "https://github.com/Grinnz/Mojo-Promise-Role-Get.git",
          "web" : "https://github.com/Grinnz/Mojo-Promise-Role-Get"
       },
-      "x_IRC" : "irc://irc.freenode.net/#mojo"
+      "x_IRC" : "ircs://irc.libera.chat/#mojo"
    },
-   "version" : "v0.1.2",
-   "x_Dist_Zilla" : {
-      "perl" : {
-         "version" : "5.030000"
-      },
-      "plugins" : [
-         {
-            "class" : "Dist::Zilla::Plugin::GithubMeta",
-            "name" : "@Author::DBOOK/GithubMeta",
-            "version" : "0.58"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::ReadmeAnyFromPod",
-            "config" : {
-               "Dist::Zilla::Role::FileWatcher" : {
-                  "version" : "0.006"
-               }
-            },
-            "name" : "@Author::DBOOK/Readme_Github",
-            "version" : "0.163250"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::GenerateFile",
-            "name" : "@Author::DBOOK/Generate_Contrib",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::MetaConfig",
-            "name" : "@Author::DBOOK/MetaConfig",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::MetaProvides::Package",
-            "config" : {
-               "Dist::Zilla::Plugin::MetaProvides::Package" : {
-                  "finder_objects" : [
-                     {
-                        "class" : "Dist::Zilla::Plugin::FinderCode",
-                        "name" : "@Author::DBOOK/MetaProvides::Package/AUTOVIV/:InstallModulesPM",
-                        "version" : "6.012"
-                     }
-                  ],
-                  "include_underscores" : 0
-               },
-               "Dist::Zilla::Role::MetaProvider::Provider" : {
-                  "$Dist::Zilla::Role::MetaProvider::Provider::VERSION" : "2.002004",
-                  "inherit_missing" : 1,
-                  "inherit_version" : 1,
-                  "meta_noindex" : 1
-               },
-               "Dist::Zilla::Role::ModuleMetadata" : {
-                  "Module::Metadata" : "1.000036",
-                  "version" : "0.006"
-               }
-            },
-            "name" : "@Author::DBOOK/MetaProvides::Package",
-            "version" : "2.004003"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::Prereqs::FromCPANfile",
-            "name" : "@Author::DBOOK/Prereqs::FromCPANfile",
-            "version" : "0.08"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::Git::Contributors",
-            "config" : {
-               "Dist::Zilla::Plugin::Git::Contributors" : {
-                  "git_version" : "2.20.1",
-                  "include_authors" : 0,
-                  "include_releaser" : 1,
-                  "order_by" : "name",
-                  "paths" : []
-               }
-            },
-            "name" : "@Author::DBOOK/Git::Contributors",
-            "version" : "0.035"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::MetaNoIndex",
-            "name" : "@Author::DBOOK/MetaNoIndex",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::MetaResources",
-            "name" : "@Author::DBOOK/MetaResources",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::CheckChangesHasContent",
-            "name" : "@Author::DBOOK/CheckChangesHasContent",
-            "version" : "0.011"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::Git::Check",
-            "config" : {
-               "Dist::Zilla::Plugin::Git::Check" : {
-                  "untracked_files" : "die"
-               },
-               "Dist::Zilla::Role::Git::DirtyFiles" : {
-                  "allow_dirty" : [
-                     "Changes",
-                     "README.pod",
-                     "dist.ini"
-                  ],
-                  "allow_dirty_match" : [],
-                  "changelog" : "Changes"
-               },
-               "Dist::Zilla::Role::Git::Repo" : {
-                  "git_version" : "2.20.1",
-                  "repo_root" : "."
-               }
-            },
-            "name" : "@Author::DBOOK/Git::Check",
-            "version" : "2.046"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::RewriteVersion",
-            "config" : {
-               "Dist::Zilla::Plugin::RewriteVersion" : {
-                  "add_tarball_name" : 0,
-                  "finders" : [
-                     ":ExecFiles",
-                     ":InstallModules"
-                  ],
-                  "global" : 0,
-                  "skip_version_provider" : 0
-               }
-            },
-            "name" : "@Author::DBOOK/RewriteVersion",
-            "version" : "0.018"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::NextRelease",
-            "name" : "@Author::DBOOK/NextRelease",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::CopyFilesFromRelease",
-            "config" : {
-               "Dist::Zilla::Plugin::CopyFilesFromRelease" : {
-                  "filename" : [
-                     "Build.PL",
-                     "CONTRIBUTING.md",
-                     "INSTALL",
-                     "LICENSE",
-                     "META.json"
-                  ],
-                  "match" : []
-               }
-            },
-            "name" : "@Author::DBOOK/CopyFilesFromRelease",
-            "version" : "0.006"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::Git::Commit",
-            "config" : {
-               "Dist::Zilla::Plugin::Git::Commit" : {
-                  "add_files_in" : [
-                     "/"
-                  ],
-                  "commit_msg" : "%v%n%n%c"
-               },
-               "Dist::Zilla::Role::Git::DirtyFiles" : {
-                  "allow_dirty" : [
-                     "Build.PL",
-                     "CONTRIBUTING.md",
-                     "Changes",
-                     "INSTALL",
-                     "LICENSE",
-                     "META.json",
-                     "README.pod",
-                     "dist.ini"
-                  ],
-                  "allow_dirty_match" : [],
-                  "changelog" : "Changes"
-               },
-               "Dist::Zilla::Role::Git::Repo" : {
-                  "git_version" : "2.20.1",
-                  "repo_root" : "."
-               },
-               "Dist::Zilla::Role::Git::StringFormatter" : {
-                  "time_zone" : "local"
-               }
-            },
-            "name" : "@Author::DBOOK/Git::Commit",
-            "version" : "2.046"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::Git::Tag",
-            "config" : {
-               "Dist::Zilla::Plugin::Git::Tag" : {
-                  "branch" : null,
-                  "changelog" : "Changes",
-                  "signed" : 0,
-                  "tag" : "v0.1.2",
-                  "tag_format" : "%v",
-                  "tag_message" : "%v"
-               },
-               "Dist::Zilla::Role::Git::Repo" : {
-                  "git_version" : "2.20.1",
-                  "repo_root" : "."
-               },
-               "Dist::Zilla::Role::Git::StringFormatter" : {
-                  "time_zone" : "local"
-               }
-            },
-            "name" : "@Author::DBOOK/Git::Tag",
-            "version" : "2.046"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::BumpVersionAfterRelease",
-            "config" : {
-               "Dist::Zilla::Plugin::BumpVersionAfterRelease" : {
-                  "finders" : [
-                     ":ExecFiles",
-                     ":InstallModules"
-                  ],
-                  "global" : 0,
-                  "munge_makefile_pl" : 0
-               }
-            },
-            "name" : "@Author::DBOOK/BumpVersionAfterRelease",
-            "version" : "0.018"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::Git::Commit",
-            "config" : {
-               "Dist::Zilla::Plugin::Git::Commit" : {
-                  "add_files_in" : [],
-                  "commit_msg" : "Bump version"
-               },
-               "Dist::Zilla::Role::Git::DirtyFiles" : {
-                  "allow_dirty" : [
-                     "Changes",
-                     "dist.ini"
-                  ],
-                  "allow_dirty_match" : [
-                     "(?^:^)"
-                  ],
-                  "changelog" : "Changes"
-               },
-               "Dist::Zilla::Role::Git::Repo" : {
-                  "git_version" : "2.20.1",
-                  "repo_root" : "."
-               },
-               "Dist::Zilla::Role::Git::StringFormatter" : {
-                  "time_zone" : "local"
-               }
-            },
-            "name" : "@Author::DBOOK/Commit_Version_Bump",
-            "version" : "2.046"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::Git::Push",
-            "config" : {
-               "Dist::Zilla::Plugin::Git::Push" : {
-                  "push_to" : [
-                     "origin"
-                  ],
-                  "remotes_must_exist" : 1
-               },
-               "Dist::Zilla::Role::Git::Repo" : {
-                  "git_version" : "2.20.1",
-                  "repo_root" : "."
-               }
-            },
-            "name" : "@Author::DBOOK/Git::Push",
-            "version" : "2.046"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::PodSyntaxTests",
-            "name" : "@Author::DBOOK/PodSyntaxTests",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::PodCoverageTests",
-            "name" : "@Author::DBOOK/PodCoverageTests",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::Test::ReportPrereqs",
-            "name" : "@Author::DBOOK/Test::ReportPrereqs",
-            "version" : "0.027"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::Git::GatherDir",
-            "config" : {
-               "Dist::Zilla::Plugin::GatherDir" : {
-                  "exclude_filename" : [
-                     "Build.PL",
-                     "Build.PL",
-                     "CONTRIBUTING.md",
-                     "INSTALL",
-                     "LICENSE",
-                     "META.json",
-                     "Makefile.PL"
-                  ],
-                  "exclude_match" : [],
-                  "follow_symlinks" : 0,
-                  "include_dotfiles" : 0,
-                  "prefix" : "",
-                  "prune_directory" : [],
-                  "root" : "."
-               },
-               "Dist::Zilla::Plugin::Git::GatherDir" : {
-                  "include_untracked" : 0
-               }
-            },
-            "name" : "@Author::DBOOK/Git::GatherDir",
-            "version" : "2.046"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::Regenerate::AfterReleasers",
-            "config" : {
-               "Dist::Zilla::Plugin::Regenerate::AfterReleasers" : {
-                  "plugins" : [
-                     "@Author::DBOOK/Readme_Github",
-                     "@Author::DBOOK/CopyFilesFromRelease"
-                  ]
-               },
-               "Dist::Zilla::Role::Regenerator" : {
-                  "$Dist::Zilla::Role::Regenerator::VERSION" : "0.001001"
-               }
-            },
-            "name" : "@Author::DBOOK/Regenerate::AfterReleasers",
-            "version" : "0.001001"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::PruneCruft",
-            "name" : "@Author::DBOOK/PruneCruft",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::ManifestSkip",
-            "name" : "@Author::DBOOK/ManifestSkip",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::MetaYAML",
-            "name" : "@Author::DBOOK/MetaYAML",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::MetaJSON",
-            "name" : "@Author::DBOOK/MetaJSON",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::License",
-            "name" : "@Author::DBOOK/License",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::ReadmeAnyFromPod",
-            "config" : {
-               "Dist::Zilla::Role::FileWatcher" : {
-                  "version" : "0.006"
-               }
-            },
-            "name" : "@Author::DBOOK/ReadmeAnyFromPod",
-            "version" : "0.163250"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::ExecDir",
-            "name" : "@Author::DBOOK/ExecDir",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::ShareDir",
-            "name" : "@Author::DBOOK/ShareDir",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::ExecDir",
-            "name" : "@Author::DBOOK/ScriptDir",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::ModuleBuildTiny::Fallback",
-            "config" : {
-               "Dist::Zilla::Plugin::ModuleBuildTiny::Fallback" : {
-                  "mb_version" : "0.28",
-                  "plugins" : [
-                     {
-                        "class" : "Dist::Zilla::Plugin::ModuleBuild",
-                        "config" : {
-                           "Dist::Zilla::Role::TestRunner" : {
-                              "default_jobs" : 1
-                           }
-                        },
-                        "name" : "ModuleBuild, via ModuleBuildTiny::Fallback",
-                        "version" : "6.012"
-                     },
-                     {
-                        "class" : "Dist::Zilla::Plugin::ModuleBuildTiny",
-                        "config" : {
-                           "Dist::Zilla::Role::TestRunner" : {
-                              "default_jobs" : 1
-                           }
-                        },
-                        "name" : "ModuleBuildTiny, via ModuleBuildTiny::Fallback",
-                        "version" : "0.015"
-                     }
-                  ]
-               },
-               "Dist::Zilla::Role::TestRunner" : {
-                  "default_jobs" : 1
-               }
-            },
-            "name" : "@Author::DBOOK/ModuleBuildTiny::Fallback",
-            "version" : "0.025"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::RunExtraTests",
-            "config" : {
-               "Dist::Zilla::Role::TestRunner" : {
-                  "default_jobs" : 1
-               }
-            },
-            "name" : "@Author::DBOOK/RunExtraTests",
-            "version" : "0.029"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::InstallGuide",
-            "config" : {
-               "Dist::Zilla::Role::ModuleMetadata" : {
-                  "Module::Metadata" : "1.000036",
-                  "version" : "0.006"
-               }
-            },
-            "name" : "@Author::DBOOK/InstallGuide",
-            "version" : "1.200013"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::Manifest",
-            "name" : "@Author::DBOOK/Manifest",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::TestRelease",
-            "name" : "@Author::DBOOK/TestRelease",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::ConfirmRelease",
-            "name" : "@Author::DBOOK/ConfirmRelease",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::UploadToCPAN",
-            "name" : "@Author::DBOOK/UploadToCPAN",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::FinderCode",
-            "name" : ":InstallModules",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::FinderCode",
-            "name" : ":IncModules",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::FinderCode",
-            "name" : ":TestFiles",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::FinderCode",
-            "name" : ":ExtraTestFiles",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::FinderCode",
-            "name" : ":ExecFiles",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::FinderCode",
-            "name" : ":PerlExecFiles",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::FinderCode",
-            "name" : ":ShareFiles",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::FinderCode",
-            "name" : ":MainModule",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::FinderCode",
-            "name" : ":AllFiles",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::FinderCode",
-            "name" : ":NoFiles",
-            "version" : "6.012"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::FinderCode",
-            "name" : "@Author::DBOOK/MetaProvides::Package/AUTOVIV/:InstallModulesPM",
-            "version" : "6.012"
-         }
-      ],
-      "zilla" : {
-         "class" : "Dist::Zilla::Dist::Builder",
-         "config" : {
-            "is_trial" : 0
-         },
-         "version" : "6.012"
-      }
-   },
+   "version" : "v0.1.3",
    "x_contributors" : [
       "Dan Book <grinnz@grinnz.com>"
    ],
-   "x_generated_by_perl" : "v5.30.0",
-   "x_serialization_backend" : "Cpanel::JSON::XS version 4.11"
+   "x_generated_by_perl" : "v5.34.0",
+   "x_serialization_backend" : "Cpanel::JSON::XS version 4.26",
+   "x_spdx_expression" : "Artistic-2.0"
 }
 
