@@ -1,5 +1,0 @@
-requires 'perl' => '5.010001';
-requires 'Carp';
-requires 'Mojolicious' => '8.0'; # promise cloning
-requires 'Role::Tiny' => '2.000002';
-test_requires 'Test::More' => '0.88';
